--- a/css/styles.css
+++ b/css/styles.css
@@ -1,15 +1,40 @@
-* {
+*{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
 
 @font-face{ 
-    font-family:'GT America';
-    src: url('../fonts/GTAmerica-CondensedBlack.woff2') format('TrueType');
+    font-family:'Arnhem';
+    src: url('../fonts/arnhem.otf') format('truetype');
 }
 
-/* -------------------------------------------- header -------------------------------------------*/
+@font-face{ 
+    font-family:'Arnhem Bold';
+    src: url('../fonts/arnhem-bold.otf') format('truetype');
+}
+
+h1{
+    font-family: 'Arnhem Bold', sans-serif; 
+    /* text-transform: uppercase; */
+    letter-spacing: 0.01em;
+    color: white;
+}
+
+h2{
+    font-family: 'Arnhem', sans-serif; 
+    /* text-transform: uppercase; */
+    letter-spacing: 0.01em;
+    color: white;
+}
+
+html{
+    /* background-color: #6a6556; */
+    /* background-color: #8a846f; */
+    background-color: #777162;
+}
+
+/* -------------------------------------------- HEADER -------------------------------------------*/
 
 header{
     display: flex;
@@ -17,50 +42,179 @@ header{
     align-items: center;
     justify-content: center;
 
-    height: 98vh;
+    height: 95vh;
 }
 
 /* header p{ dit is die open archive 'knop'
     margin-top: 10em;
 } */
 
-/* -------------------------------------------- main -------------------------------------------*/
+/* -------------------------------------------- MAIN -------------------------------------------*/
+
+main{
+    min-height: 150vh;
+}
 
 .container{
-    display: flex;
+    display: flex; 
     flex-direction: column;
+    justify-content: center;
     align-items: center;
 }
 
-.folder-1{
-    background-color: hotpink;
-    width: 95vw;
+/* ----------- FOLDERS ----------*/
+
+article{
     position: relative;
-    margin-bottom: 2rem;
+    transition: transform 1.5s ease;
 }
 
-.folder-2{
-    background-color: orange;
-    width: 95vw;
-    position: relative;
-    margin-bottom: 2rem;
-}
-
-.folder-3{
-    background-color: green;
-    width: 95vw;
-    position: relative;
-    margin-bottom: 2rem;
-}
+/* folder dicht */
 
 article section{
-    position: absolute;
-    top: -2.2rem;
-    left: 2rem;
+    width: 95vw;
+    margin-bottom: 2em;
+    padding: 1.5em;
 
-    padding: 0.6rem 1.4rem;
+    max-height: 140px;
+    overflow: hidden;
+}
+
+/* folder open */
+
+article.active section{
+    max-height: 800px;
+}
+
+article.active{
+    z-index: 10;
+}
+
+.folder-2.active{
+    transform: translateY(-194.5px);
+}
+
+.folder-3.active{
+    transform: translateY(-389.5px);
+}
+
+@media (max-width: 768px) {
+
+    .folder-2.active{
+        transform: translateY(-195px);
+    }
+
+    .folder-3.active{
+        transform: translateY(-390px);
+    }
+
+}
+
+/* ----------------- FOLDER 1 -----------------*/
+
+.folder-1{
+    position: relative;
+    z-index: 1;
+}
+
+.folder-1 p{
+    background-color: #969080;
+    color: #3f3e2c;
+    text-transform: uppercase;
+    width: 30vw;
+    max-width: 80px;
+
+    padding: 0.6em 1em;
     font-weight: bold;
 
     border-radius: 12px 12px 0 0;
+    box-shadow: 2px 2px 6px rgba(0,0,0,0.15);
 }
 
+.folder-1 section{
+    background-color: #969080;
+    color: #3f3e2c;
+}
+
+/* .folder-1 section h3{
+    margin-bottom: 0.5em;
+} */
+
+/* ----------------- FOLDER 2 -----------------*/
+
+.folder-2{
+    position: relative;
+    z-index: 2;
+}
+
+.folder-2 p{
+    margin-left: 5.15em;
+    background-color: #211e15;
+    text-transform: uppercase;
+    color: #dbd2b7;
+    width: 55vw;
+    max-width: 200px;
+
+    padding: 0.6em 1em;
+    font-weight: bold;
+
+    border-radius: 12px 12px 0 0;
+    box-shadow: 2px 2px 6px rgba(0,0,0,0.15);
+}
+
+.folder-2 section{
+    background-color: #211e15;
+    color: #dbd2b7;
+}
+
+@media (max-width: 768px) {
+
+    .folder-2 p{
+        width: 80vw;
+        margin-left: 4.4em;
+
+        padding: 0.6em 1em;
+    }
+}
+
+/* .folder-2 section h3{
+    margin-bottom: 0.5em;
+} */
+
+/* ----------------- FOLDER 3 -----------------*/
+
+.folder-3{
+    z-index: 11;
+    position: relative;
+}
+
+.folder-3 p{
+    margin-left: 17.74em;
+    background-color: #c1b6a4;
+    text-transform: uppercase;
+    color: #1b150b;
+    width: 30vw;
+    max-width: 100px;
+
+    padding: 0.6em 1em;
+    font-weight: bold;
+
+    border-radius: 12px 12px 0 0;
+    box-shadow: 2px 2px 6px rgba(0,0,0,0.15);
+}
+
+@media (max-width: 768px) {
+
+    .folder-3 p{
+        margin-left: 13em;
+    }
+}
+
+.folder-3 section{
+    background-color: #c1b6a4;
+    color: #1b150b;
+}
+
+/* .folder-3 section h3{
+    margin-bottom: 0.5em;
+} */
