--- a/css/styles.css
+++ b/css/styles.css
@@ -15,49 +15,82 @@
 }
 
 @font-face{ 
-    font-family:'Amsterdam';
-    src: url('../fonts/amsterdam.ttf') format('truetype');
+    font-family:'Swiss';
+    src: url('../fonts/swiss.ttf') format('truetype');
 }
 
 @font-face{ 
-    font-family:'Whispering';
-    src: url('../fonts/whispering.ttf') format('truetype');
+    font-family:'Lato';
+    src: url('../fonts/lato.ttf') format('truetype');
 }
 
-@font-face{ 
-    font-family:'Modernline';
-    src: url('../fonts/modernline.otf') format('truetype');
+:root{
+    --mainAchtergrond: #777162;
+    --achtergrondFolderEen: #969080;
+    --tekstFolderEen: #3f3e2c;
+    --achtergrondFolderTwee: #211e15;
+    --tekstFolderTwee: #dbd2b7;
+    --achtergrondFolderDrie: #c1b6a4;
+    --tekstFolderDrie: #1b150b;
+    --mainTekstKleur: #FAFAF7;
+    --mainTekstFont: 'Inter', sans-serif;
+    --lijn: #D6D4CB;
+    
+    --normaalFont: 'Arnhem', sans-serif; 
+    --normaalFontBold: 'Arnhem Bold', sans-serif; 
+    --fancyFont: 'Swiss', sans-serif;
 }
 
-@font-face{ 
-    font-family:'Signatie';
-    src: url('../fonts/signatie.otf') format('truetype');
+.other-theme{
+    --mainAchtergrond: white;
+    --achtergrondFolderEen: black;
+    --tekstFolderEen: white;
+    --achtergrondFolderTwee: black;
+    --tekstFolderTwee: white;
+    --achtergrondFolderDrie: black;
+    --tekstFolderDrie: white;
+
+    --normaalFont: sans-serif;
+    --normaalFontBold: sans-serif;
+    --fancyFont: sans-serif;
 }
 
 h1{
-    font-family: 'Arnhem Bold', sans-serif; 
-    /* text-transform: uppercase; */
+    font-family: var(--normaalFontBold);
     letter-spacing: 0.01em;
     color: white;
 }
 
 h2{
-    font-family: 'Arnhem', sans-serif; 
-    /* text-transform: uppercase; */
+    font-family: var(--normaalFont);
     letter-spacing: 0.01em;
     color: white;
 }
 
 h3{
-    font-family: 'Modernline', sans-serif;
-    /* letter-spacing: 0.2em; */
+    font-family: var(--fancyFont);
+    color: var(--mainTekstKleur);
+    font-size: 5em;
+    font-weight: 1;
+}
+
+h4{
+    font-family: var(--fancyFont);
     font-size: 3em;
+    font-weight: 1;
+}
+
+p{
+    color: var(--mainTekstKleur);
+    font-family: var(--mainTekstFont);
+}
+
+li{
+    font-family: var(--mainTekstFont);
 }
 
 html{
-    /* background-color: #6a6556; */
-    /* background-color: #8a846f; */
-    background-color: #777162;
+    background-color: var(--mainAchtergrond);
 }
 
 ul{
@@ -84,14 +117,14 @@ header{
     flex-direction: row;
     position: absolute;
     justify-content: space-between;
-    color: #3f3e2c;
+    color: var(--tekstFolderEen);
 
     padding: 0.2em;
     top: 0.5em;
     width: 100%;
 }
 
-.statisch h4:nth-of-type(1){
+.statisch h5:nth-of-type(1){
     text-transform: uppercase;
 }
 
@@ -102,16 +135,14 @@ header{
     align-items: center;
 }
 
-/* ----------- FOLDERS ----------*/
+/* -------------------------------------------- FOLDERS -------------------------------------------*/
 
 article{
     position: relative;
     transition: transform 2s ease;
 }
 
-/* folder dicht */
-
-article section{ /* ----- alle folders -----*/
+article section{
     width: 95vw;
     margin-bottom: 2em;
     padding: 0.5em 1em;
@@ -119,8 +150,6 @@ article section{ /* ----- alle folders -----*/
     /* max-height: 140px; */
     overflow: hidden;
 }
-
-/* folder open */
 
 article.active section{
     max-height: 800px;
@@ -160,8 +189,8 @@ article.active{
 }
 
 .folder-1 p{ /* ----- tabje -----*/
-    background-color: #969080;
-    color: #3f3e2c;
+    background-color: var(--achtergrondFolderEen);
+    color: var(--tekstFolderEen);
     text-transform: uppercase;
     width: 30vw;
     max-width: 80px;
@@ -174,17 +203,13 @@ article.active{
 }
 
 .folder-1 section{ /* ----- folder -----*/
-    background-color: #969080;
-    color: #3f3e2c;
+    background-color: var(--achtergrondFolderEen);
+    color: var(--tekstFolderEen);
     border-radius: 0 6px 6px 6px;
     box-shadow: 2px 2px 6px rgba(0,0,0,0.15);
 
     padding: 1em 2em;
 }
-
-/* .folder-1 section h3{
-    margin-bottom: 0.5em;
-} */
 
 /* ----------------- FOLDER 2 -----------------*/
 
@@ -195,9 +220,9 @@ article.active{
 
 .folder-2 p{ /* ----- tabje -----*/
     margin-left: 5.15em;
-    background-color: #211e15;
+    background-color: var(--achtergrondFolderTwee);
     text-transform: uppercase;
-    color: #dbd2b7;
+    color: var(--tekstFolderTwee);
     width: 30vw;
     max-width: 100px;
 
@@ -219,8 +244,8 @@ article.active{
 }
 
 .folder-2 section{ /* ----- folder -----*/
-    background-color: #211e15;
-    color: #dbd2b7;
+    background-color: var(--achtergrondFolderTwee);
+    color: var(--tekstFolderTwee);
 
     border-radius: 6px;
     box-shadow: 2px 2px 6px rgba(0,0,0,0.15);
@@ -245,10 +270,6 @@ article.active{
   justify-self: end;
 }
 
-/* .folder-2 section h3{
-    margin-bottom: 0.5em;
-} */
-
 /* ----------------- FOLDER 3 -----------------*/
 
 .folder-3{
@@ -259,9 +280,9 @@ article.active{
 
 .folder-3 p{ /* ----- tabje -----*/
     margin-left: 11.5em;
-    background-color: #c1b6a4;
+    background-color: var(--achtergrondFolderDrie);
     text-transform: uppercase;
-    color: #1b150b;
+    color: var(--tekstFolderDrie);
     width: 55vw;
     max-width: 200px;
 
@@ -280,8 +301,8 @@ article.active{
 }
 
 .folder-3 section{ /* ----- folder -----*/
-    background-color: #c1b6a4;
-    color: #1b150b;
+    background-color: var(--achtergrondFolderDrie);
+    color: var(--tekstFolderDrie);
     position: relative;
 
     border-radius: 6px;
@@ -292,9 +313,244 @@ article.active{
     padding: 1em 2em;
 }
 
-/* .folder-3 section h3{
-    margin-bottom: 0.5em;
+/* -------------------------------------------- OVER MIJ MET FOTO -------------------------------------------*/
+
+.about-me{
+    display: flex;
+    flex-direction: row;
+    margin: 5em;
+
+    border-left: 1px solid var(--lijn);
+
+    height: 100vh;
+    color: var(--mainTekst);
+
+    /* Margin even groot maken als de secties hierboven */
+}
+
+.about-me img{
+    height: 60vh;
+	object-fit: cover;
+
+    position: sticky;
+    top: 15vh;
+    align-self: flex-start;
+    padding-left: 3em;
+
+    img{
+      aspect-ratio: 1;
+    }
+
+    @media (prefers-reduced-motion: no-preference) {
+      animation-name: afbeeldingUno;
+      animation-range: entry contain;
+      animation-fill-mode: both;
+      animation-timeline: view();
+    }
+}
+
+@keyframes afbeeldingUno{
+  from{
+    transform: translateX(80em)
+  }
+  to{
+    transform: translateX(0em)
+  }
+}
+
+.about-me div {
+    margin-left: 2em;
+    margin-right: 8em;    
+}
+
+.about-me p{
+    padding-top: 1em;
+    padding-right: 3em;
+    width: 20vw;   
+
+    p{
+      aspect-ratio: 1;
+    }
+
+    @media (prefers-reduced-motion: no-preference) {
+      animation-name: tekstEen;
+      animation-range: entry contain;
+      animation-fill-mode: both;
+      animation-timeline: view();
+    }
+}
+
+@keyframes tekstEen{
+  from{
+    transform: translateX(80em)
+  }
+  to{
+    transform: translateX(0em)
+  }
+}
+
+/* ---------------------------------------------- GALLERY FOTO'S -------------------------------------------*/
+
+::-webkit-scrollbar{
+    width: 1px;
+    height: 1px;
+}
+
+.horizontal-scroll-wrapper{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    width: 100vh;
+    height: 100vw;
+
+    transform: rotate(-90deg) translate3d(0,-100vh,0);
+    transform-origin: right top;
+    overflow-y: auto;
+    overflow-x: hidden;
+    perspective: 1px;
+    transform-style: preserve-3d;
+
+    margin-top: 25em;
+}
+
+.img-wrapper{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    transform: rotate(90deg);
+    min-height: 40vh;
+    transform-origin: 50% 50%;
+    transform: rotate(90deg) translateZ(.1px) scale(0.9) translateX(0px) translateY(-3vh);
+    transition: 1s;
+}
+
+.img-wrapper:hover{
+    min-height: 65vh;
+}
+
+.horizontal-scroll-wrapper img{
+    max-width: 45vh;
+    max-height: 50vh;
+
+    transition: 0.5s;
+    vertical-align: top;
+}
+
+.slower{
+    transform: rotate(90deg) translateZ(-.2px) scale(1.1) translateX(0%) translateY(-10vh);
+}
+
+.slower1{
+    transform: rotate(90deg) translateZ(-.25px) scale(1.05) translateX(0%) translateY(8vh);
+}
+
+.slower2{
+    transform: rotate(90deg) translateZ(-.3px) scale(1.3) translateX(0%) translateY(2vh);
+}
+
+.slower-down{
+    transform: rotate(90deg) translateZ(-.2px) scale(1.1) translateX(0%) translateY(16vh);
+}
+
+.faster{
+    transform: rotate(90deg) translateZ(.15px) scale(0.8) translateX(0%) translateY(14vh);
+}
+
+.faster1{
+    transform: rotate(90deg) translateZ(.05px) scale(0.8) translateX(0%) translateY(10vh);
+}
+
+.fastest{
+    transform: rotate(90deg) translateZ(.22px) scale(0.7) translateX(-10vh) translateY(-15vh);
+}
+
+.vertical{
+    transform: rotate(90deg) translateZ(-.15px) scale(1.15) translateX(0%) translateY(0%);
+}
+
+.last{
+    transform: rotate(90deg) translateZ(-.2px) scale(1.1) translateX(25vh) translateY(-8vh);
+}
+
+/* ----------------------------------------------- LEERDOELEN -----------------------------------------------*/
+
+.leerdoelen{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.leerdoelen img{
+    height: 20vh;
+}
+
+.leerdoelen > div{
+    display: flex;
+    justify-content: space-around;
+    width: 100%;
+
+    gap: 1em;
+}
+
+.leerdoelen > div > div{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    padding-top: 5em;
+}
+
+.leerdoelen > div > div > p{
+    padding-top: 1em;
+}
+
+/* --------------- SVG animeren? ------------------*/
+
+/* --------------- laten bouncen zoals die poppetjes van Sanne? ------------------*/
+
+/* ------------------------------------------- API KLASGENOTEN -----------------------------------------------*/
+
+.klasgenoten{
+    height: 100vh;
+    margin-top: 9em;
+}
+
+/* ---------------------------------------------- ANIMATIES --------------------------------------------------*/
+
+
+
+/* Glitch Text Reveal */
+
+/* [data-char] {
+  color: transparent;
+  position: relative;
+}
+
+[data-char]:after {
+  --txt: attr(data-char);
+  animation-duration: 0.2s;
+  animation-delay: 0.5s;
+  animation-timing-function: steps(1);
+  animation-fill-mode: backwards;
+  content: var(--txt);
+  color: var(--color);
+  position: absolute;
+  left: 0;
+  top: 0;
+}
+
+@keyframes glitch-switch {
+  0% { content: var(--char-0); }
+  10% { content: var(--char-1); }
+  20% { content: var(--char-2); }
+  30% { content: var(--char-3); }
+  40% { content: var(--char-4); }
+  50% { content: var(--char-5); }
+  60% { content: var(--char-6); }
+  70% { content: var(--char-7); }
+  80% { content: var(--char-8); }
+  90% { content: var(--char-9); }
+  100% { content: var(--char-0); }
 } */
-
-
-
