--- a/css/styles.css
+++ b/css/styles.css
@@ -10,11 +10,6 @@
 }
 
 @font-face{ 
-    font-family:'Arnhem Bold';
-    src: url('../fonts/arnhem-bold.woff2') format('truetype');
-}
-
-@font-face{ 
     font-family:'Swiss';
     src: url('../fonts/swiss.woff2') format('truetype');
 }
@@ -25,6 +20,7 @@
 }
 
 :root{
+    /* Colors */
     --mainBackground: #777162;
     --backgroundFolderOne: #969080;
     --textFolderOne: #3f3e2c;
@@ -34,48 +30,54 @@
     --textFolderThree: #1b150b;
     --mainTextColor: #FAFAF7;
     --mainTextColorOtherTheme: #d8d6cf;
-    --mainTextFont: 'Inter', sans-serif;
     --line: #D6D4CB;
     
+    /* Typography */
     --normalFont: 'Arnhem', sans-serif; 
     --normalFontBold: 'Arnhem Bold', sans-serif; 
     --fancyFont: 'Swiss', sans-serif;
     --arnhemFont: 'Arnhem', sans-serif;
+    --mainTextFont: 'Inter', sans-serif;
 
-    --imageFilter: grayscale(0%);
+    /* Horizontal scroll */
+    --imagesTransform: rotate(-90deg) translateX(-100%);
+    --wrapper-transform: rotate(90deg) translateZ(.1px) scale(0.9) translateX(0px) translateY(-3vh);
+    --parallax-transform: none;
 
-    --transformSlower: rotate(90deg) translateZ(-.2px) scale(1.1) translateX(0%) translateY(-10vh);
-    --transformSlower1: rotate(90deg) translateZ(-.25px) scale(1.05) translateX(0%) translateY(8vh);
-    --transformSlower2: rotate(90deg) translateZ(-.3px) scale(1.3) translateX(0%) translateY(2vh);
-    --transformSlowerDown: rotate(90deg) translateZ(-.2px) scale(1.1) translateX(0%) translateY(16vh);
-    --transformFaster: rotate(90deg) translateZ(.15px) scale(0.8) translateX(0%) translateY(14vh);  
-    --transformFaster1: rotate(90deg) translateZ(.05px) scale(0.8) translateX(0%) translateY(10vh);
-    --transformFastest: rotate(90deg) translateZ(.22px) scale(0.7) translateX(-10vh) translateY(-15vh);
-    --transformVertical: rotate(90deg) translateZ(-.15px) scale(1.15) translateX(0%) translateY(0%);
-    --transformLast: rotate(90deg) translateZ(-.2px) scale(1.1) translateX(25vh) translateY(-8vh);
+    --transformSlower: translateZ(-.2px) scale(1.1) translateX(0%) translateY(-10vh);
+    --transformSlower1: translateZ(-.25px) scale(1.05) translateX(0%) translateY(8vh);
+    --transformSlower2: translateZ(-.3px) scale(1.3) translateX(0%) translateY(2vh);
+    --transformSlowerDown: translateZ(-.2px) scale(1.1) translateX(0%) translateY(16vh);
+    --transformFaster: translateZ(.15px) scale(0.8) translateX(0%) translateY(14vh);  
+    --transformFaster1: translateZ(.05px) scale(0.8) translateX(0%) translateY(10vh);
+    --transformFastest: translateZ(.22px) scale(0.7) translateX(-10vh) translateY(-15vh);
+    --transformVertical: translateZ(-.15px) scale(1.15) translateX(0%) translateY(0%);
+    --transformLast: translateZ(-.2px) scale(1.1) translateX(25vh) translateY(-8vh);
 
+    /* Layout */
     --imageWidth: 100vh;
     --imageHeight: 100vw;
-    --imagesTransform: rotate(-90deg) translateX(-100%);
     --imagesOverflowY: auto;
     --imagesOverflowX: hidden;
     --flexDirection: column;
-    --transformImagesWrapper: rotate(90deg) translateZ(.1px) scale(0.9) translateX(0px) translateY(-3vh);
     --minimumHeightImages: 40vh;
-
     --flexWrap: nowrap;
-    --textUppercase: uppercase;
+    --sticky: sticky;
+    --folder-shift: 24vh;
 
+    /* Styling */
+    --imageFilter: grayscale(0%);
+    --hoverToTop: pink;
+    --textUppercase: uppercase;
+    --opacity: opacity;
+
+    /* Animation */
     --animationNameText: texts;
     --animationNameImage: imageAboutMe;
-    --opacity: opacity;
-    --sticky: sticky;
-    --hoverToTop: pink;
-
-    --folder-shift: 24vh;
 }
 
 .other-theme{
+    /* Colors */
     --mainBackground: white;
     --backgroundFolderOne: black;
     --textFolderOne: white;
@@ -86,40 +88,35 @@
     --mainTextColor: black;
     --mainTextColorOtherTheme: black;
 
+    /* Typography */   
     --normalFont: sans-serif;
     --normalFontBold: sans-serif;
     --fancyFont: sans-serif;
     --arnhemFont: sans-serif;
 
-    --imageFilter: grayscale(100%);
+    /* Horizontal Scroll */   
+    --transformImagesWrapper: none;
+    --minimumHeightImages: auto;
 
-    --transformSlower: none;
-    --transformSlower1: none;
-    --transformSlower2: none;
-    --transformSlowerDown: none;
-    --transformFaster: none;
-    --transformFaster1: none;
-    --transformFastest: none;
-    --transformVertical: none;
-    --transformLast: none;
-
+    /* Layout */
+    --opacity: none;
+    --sticky: none;
     --imageWidth: 100%;
     --imageHeight: auto;
     --imagesTransform: none;
     --imagesOverflowY: visible;
     --imagesOverflowX: visible;
     --flexDirection: row;
-    --transformImagesWrapper: none;
-    --minimumHeightImages: auto;
-
     --flexWrap: wrap;
+
+    /* Styling */
+    --imageFilter: grayscale(100%);
+    --hoverToTop: grey;
     --textUppercase: none;
 
+    /* Animation */
     --animationNameText: none;
     --animationNameImage: none;
-    --opacity: none;
-    --sticky: none;
-    --hoverToTop: grey;
 }
 
 /* --------------------------------------------------------------------------------- MARK: GENERAL 
@@ -132,13 +129,13 @@ h1{
     letter-spacing: 0.01em;
     color: var(--mainTextColor);
     font-family: var(--fancyFont);
-    font-weight: 1;
+    font-weight: 1; /* Otherwise the letters would be too thick */
 
     font-size: clamp(2rem, 6vw, 4.5rem); 
 
     animation: colorChange 4s ease-in-out infinite alternate;
 
-    /* Bron: https://developer.mozilla.org/en-US/docs/Web/CSS/Reference/Values/clamp */
+    /* Source: https://developer.mozilla.org/en-US/docs/Web/CSS/Reference/Values/clamp */
 }
 
 @keyframes colorChange{
@@ -154,12 +151,10 @@ h1{
 }
 
 h2{
-    font-family: var(--fancyFont);
-    letter-spacing: 0.01em;
     color: var(--mainTextColor);
-    font-weight: 1;
+    font-family: var(--arnhemFont);
 
-    font-size: clamp(2rem, 3.5vw, 4.5rem); 
+    font-size: clamp(0.95rem, 2vw, 1.1rem); 
 }
 
 h3{
@@ -175,13 +170,6 @@ h4{
     font-weight: 1;
 
     font-size: clamp(1.8rem, 3vw, 4rem); 
-}
-
-h5{
-    color: var(--mainTextColor);
-    font-family: var(--arnhemFont);
-
-    font-size: clamp(0.95rem, 2vw, 1.1rem); 
 }
 
 p{
@@ -233,10 +221,6 @@ header{
     top: 0.5em;
     width: 100%;
 
-    h5:nth-of-type(1){
-        text-transform: var(--textUppercase);
-    }
-
     @media (prefers-reduced-motion: no-preference){
         animation-name: opacity;
         animation-range: entry contain;
@@ -245,24 +229,28 @@ header{
     }
 }
 
+.static h2:nth-of-type(1){
+    text-transform: var(--textUppercase);
+}
+
 /* ---------------------------------------------------------------------------------------- MARK: FOLDERS 
 */
 
-.container{ /* container folder */
+.container{ /* container folders */
     display: flex; 
     flex-direction: column;
     justify-content: center;
     align-items: center;
+}
 
-    article{ /* individual folder */
-        position: relative;
-        transition: transform 2s ease;
+.container article{  /* individual folder */
+    position: relative;
+    transition: transform 2s ease;     
+}
 
-        section{ /* contents folder */
-            width: 95vw;
-            padding: 0.5em 1em 1.5em 1em;
-        }
-    }
+.container article section{  /* contents folder */
+    width: 95vw;
+    padding: 0.5em 1em 1.5em 1em;
 }
 
 /* Folders go up */
@@ -280,31 +268,34 @@ header{
 
 .folder-1{
     position: relative;
+}
 
-    p{ /* tab */
-        position: absolute;
-        top: 0%;
-        transform: translateY(-100%);
+.folder-1 h3{ /* tab */
+    position: absolute;
+    top: 0%;
+    transform: translateY(-100%);
 
-        background-color: var(--backgroundFolderOne);
-        color: var(--textFolderOne);
-        text-transform: var(--textUppercase);
+    background-color: var(--backgroundFolderOne);
+    color: var(--textFolderOne);
+    text-transform: var(--textUppercase);
         
-        padding: 0.6em 1em;
-        font-weight: bold;
+    padding: 0.6em 1em;
+    font-weight: bold;
 
-        border-radius: 12px 12px 0 0;
-    }
+    border-radius: 12px 12px 0 0;
 
-    section{ /* folder */
-        padding-top: 3rem;
+    font-family: var(--mainTextFont);
+    font-size: clamp(0.7rem, 1.2vw, 0.9rem);  
+}
 
-        background-color: var(--backgroundFolderOne);
-        color: var(--textFolderOne);
-        border-radius: 0 6px 6px 6px;
+.folder-1 section{ /* folder */
+    padding-top: 3rem;
 
-        padding: 1em 2em;
-    }
+    background-color: var(--backgroundFolderOne);
+    color: var(--textFolderOne);
+    border-radius: 0 6px 6px 6px;
+
+    padding: 1em 2em;
 }
 
 /* ----------------- FOLDER 2 -----------------*/
@@ -313,50 +304,52 @@ header{
     position: relative;
     z-index: 2;
     margin-top: 4em;
+}
 
-    p{ /* tab */
-        position: absolute;
-        top: 0%;
-        transform: translateY(-90%);
-        left: 10%;
+.folder-2 h3{ /* tab */
+    position: absolute;
+    top: 0%;
+    transform: translateY(-90%);
+    left: 10%;
 
-        background-color: var(--backgroundFolderTwo);
-        text-transform: var(--textUppercase);
-        color: var(--textFolderTwo);
+    background-color: var(--backgroundFolderTwo);
+    text-transform: var(--textUppercase);
+    color: var(--textFolderTwo);
 
-        padding: 0.6em 1em;
-        font-weight: bold;
+    padding: 0.6em 1em;
+    font-weight: bold;
 
-        border-radius: 12px 12px 0 0;
-    }
+    border-radius: 12px 12px 0 0;
+    font-family: var(--mainTextFont);
+    font-size: clamp(0.7rem, 1.2vw, 0.9rem); 
+}
 
-    section{ /* folder */
-        padding-top: 3rem;
+.folder-2 section{ /* folder */
+    padding-top: 3rem;
 
-        background-color: var(--backgroundFolderTwo);
-        color: var(--textFolderTwo);
+    background-color: var(--backgroundFolderTwo);
+    color: var(--textFolderTwo);
 
-        border-radius: 6px;
+    border-radius: 6px;
 
-        padding: 1em 2em;
+    padding: 1em 2em;
+}
 
-        ul{
-            margin: 0.5em 3em;
+.folder-2 section ul{
+    margin: 0.5em 3em;
 
-            display: grid;
-            grid-template-columns: repeat(3, 1fr);
-            gap: clamp(1rem, 3vw, 3rem);
-        }
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: clamp(1rem, 3vw, 3rem);
+}
 
-        /* To make items appear at a random place */
-        li{ 
-            list-style: none;
-        }
+/* To make items appear at a random place */
+.folder-2 section ul li{
+    list-style: none;
+}
 
-        li:nth-child(3n){
-            justify-self: center;
-        }
-    }
+.folder-2 section ul li:nth-child(3n){
+    justify-self: center;
 }
 
 /* ----------------- FOLDER 3 -----------------*/
@@ -365,40 +358,41 @@ header{
     position: relative;
     z-index: 11;
     margin-top: 6em;
-
-    p{ /* tab */
-        position: absolute;
-        top: 0%;
-        left: 28%;
-        transform: translateY(-90%);
-        padding-top: 3em;
-
-        background-color: var(--backGroundFolderThree);
-        text-transform: var(--textUppercase);
-        color: var(--textFolderThree);
-
-        padding: 0.6em 1em;
-        font-weight: bold;
-
-        border-radius: 12px 12px 0 0;
-    }
-
-    section{ /* folder */
-        padding-top: 3rem;
-
-        background-color: var(--backGroundFolderThree);
-        color: var(--textFolderThree);
-        position: relative;
-
-        border-radius: 6px;
-
-        min-height: 60vh;
-        height: auto;
-
-        padding: 1em 2em;
-    }
 }
 
+.folder-3 h3{ /* tab */
+    position: absolute;
+    top: 0%;
+    left: 28%;
+    transform: translateY(-90%);
+    padding-top: 3em;
+
+    background-color: var(--backGroundFolderThree);
+    text-transform: var(--textUppercase);
+    color: var(--textFolderThree);
+
+    padding: 0.6em 1em;
+    font-weight: bold;
+
+    border-radius: 12px 12px 0 0;
+    font-family: var(--mainTextFont);
+    font-size: clamp(0.7rem, 1.2vw, 0.9rem); 
+}
+
+.folder-3 section{ /* folder */
+    padding-top: 3rem;
+
+    background-color: var(--backGroundFolderThree);
+    color: var(--textFolderThree);
+    position: relative;
+
+    border-radius: 6px;
+
+    min-height: 60vh;
+    height: auto;
+
+    padding: 1em 2em;
+}
 /* ---------------------------------------------------------------------------------------- MARK: ABOUT ME
 */
 
@@ -412,7 +406,7 @@ header{
 
     height: auto;
 
-    color: var(--mainTekst);
+    color: var(--mainTekstColor);
 
     /* Fade In */
     @media (prefers-reduced-motion: no-preference){
@@ -421,34 +415,34 @@ header{
         animation-fill-mode: both;
         animation-timeline: view();
     }
+}
 
-    div{
-        margin-left: 1em;
-        
-        p{
-            padding-top: 1em;
-            padding-right: 3em;
-            max-width: 60ch;  
-        }
-    }
+.about-me div{
+    margin-left: 1em;
+}
+
+.about-me div p{
+    padding-top: 1em;
+    padding-right: 3em;
+    max-width: 60ch;  
+}
+
+.about-me img{
+    width: 100%;
+    height: auto;
+    position: relative;
+	object-fit: cover;
 
     img{
-        width: 100%;
-        height: auto;
-        position: relative;
-	    object-fit: cover;
-
-        img{
-            aspect-ratio: 1;
-        }
-
-        @media (prefers-reduced-motion: no-preference) {
-            animation-name: var(--animationNameImage);
-            animation-range: entry contain;
-            animation-fill-mode: both;
-            animation-timeline: view();
-        } 
+         aspect-ratio: 1;
     }
+
+    @media (prefers-reduced-motion: no-preference) {
+        animation-name: var(--animationNameImage);
+        animation-range: entry contain;
+        animation-fill-mode: both;
+        animation-timeline: view();
+    } 
 }
 
 @media (min-width: 600px){
@@ -553,14 +547,14 @@ header{
     overflow-x: var(--imagesOverflowX);
     perspective: 1px;
     transform-style: preserve-3d;
+}
 
-    img{
-        max-width: 45vh;
-        max-height: 50vh;
+.horizontal-scroll-wrapper img{
+    max-width: 45vh;
+    max-height: 50vh;
 
-        transition: 0.5s;
-        vertical-align: top;
-    }
+    transition: 0.5s;
+    vertical-align: top;
 }
 
 .img-wrapper{
@@ -570,7 +564,8 @@ header{
 
     min-height: var(--minimumHeightImages);
     transform-origin: 50% 50%;
-    transform: var(--transformImagesWrapper);
+    /* transform: var(--transformImagesWrapper); */
+    transform: var(--wrapper-transform) var(--parallax-transform);
     transition: 1s;
 }
 
@@ -582,13 +577,13 @@ body:not(.other-theme) .img-wrapper:hover{
     width: 100%;
     max-width: 100vw;
     margin: 35em 4.3em; 
+}
 
-    img{
-        width: 100%;
-        height: 100%;
-        object-fit: cover;
-        display: block;
-    }
+.other-theme .horizontal-scroll-wrapper img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    display: block;
 }
 
 .other-theme .img-wrapper{
@@ -598,39 +593,43 @@ body:not(.other-theme) .img-wrapper:hover{
 }
 
 .slower{
-    transform: var(--transformSlower);
+    --parallax-transform: var(--transformSlower);
 }
 
 .slower1{
-    transform: var(--transformSlower1);
+    --parallax-transform: var(--transformSlower1);
 }
 
 .slower2{
-    transform: var(--transformSlower2);
+    --parallax-transform: var(--transformSlower2);
 }
 
 .slower-down{
-    transform: var(--transformSlowerDown);
+    --parallax-transform: var(--transformSlowerDown);
 }
 
 .faster{
-    transform: var(--transformFaster);
+    --parallax-transform: var(--transformFaster);
 }
 
 .faster1{
-    transform: var(--transformFaster1);
+    --parallax-transform: var(--transformFaster1);
 }
 
 .fastest{
-    transform: var(--transformFastest);
+    --parallax-transform: var(--transformFastest);
 }
 
 .vertical{
-    transform: var(--transformVertical);
+    --parallax-transform: var(--transformVertical);
 }
 
 .last{
-    transform: var(--transformLast);
+    --parallax-transform: var(--transformLast);
+}
+
+.neutral{ /* Not in root because nothing transforms, this was needed for the neutral images to not be rotated*/
+    --parallax-transform: translateZ(0px);
 }
 
 @media (max-width: 768px){
@@ -671,15 +670,13 @@ body:not(.other-theme) .img-wrapper:hover{
         object-fit: cover;
     }
 
-    body:not(.other-theme) .img-wrapper:hover {
+    body:not(.other-theme) .img-wrapper:hover{
         min-height: auto;
     }
 }
 
 /* --------------------------------------------------------------------------------------- MARK: API CLASSMATES  
 */
-
-/* HIER NOG DIE CYD STRUCTUUR DOEN!!! */
 
 .classmates{
     display: flex;
@@ -690,6 +687,13 @@ body:not(.other-theme) .img-wrapper:hover{
     margin-inline: auto;
     margin-top: clamp(4em, 8vw, 10em);
     margin-bottom: clamp(4em, 10vw, 13em);
+
+    @media (prefers-reduced-motion: no-preference){
+        animation-name: var(--opacity);
+        animation-range: entry contain;
+        animation-fill-mode: both;
+        animation-timeline: view(); 
+    }
 }
 
 .classmates .classmate-item{
@@ -745,15 +749,6 @@ body:not(.other-theme) .img-wrapper:hover{
 
     .classmates .classmate-item img{
         max-width: 220px;
-    }
-}
-
-@media (prefers-reduced-motion: no-preference){
-    .classmates{
-        animation-name: var(--opacity);
-        animation-range: entry contain;
-        animation-fill-mode: both;
-        animation-timeline: view();
     }
 }
 
